Update vercel.json to properly handle static assets and routing

--- a/vercel.json
+++ b/vercel.json
@@ -3,13 +3,13 @@
   "name": "cloudtech-solutions",
   "builds": [
     {
-      "src": "index.html",
+      "src": "**/*",
       "use": "@vercel/static"
     }
   ],
   "rewrites": [
     {
-      "source": "/(.*)",
+      "source": "/((?!.*\\.).*)$",
       "destination": "/index.html"
     }
   ],
